source/logs/toontown-03-Jul-2019_14_07_13.log
ToontownStart: Polling for game2 to finish...
ToontownStart: Game2 is finished.
ToontownStart: Starting the game.
ToontownStart: setting default font
ToontownStart: Loading default gui sounds
ToontownStart: serverVersion:  ttn-dev
Traceback (most recent call last):
  File "H:\Toontown\Toontown Sources\Toontown-Next\source\dependencies\panda\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "H:\Toontown\Toontown Sources\Toontown-Next\source\dependencies\panda\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "H:\Toontown\Toontown Sources\Toontown-Next\source\toontown\toonbase\ToontownStart.py", line 87, in <module>
    from toontown.distributed import ToontownClientRepository
  File "toontown\distributed\ToontownClientRepository.py", line 46, in <module>
    from toontown.toon import LocalToon
  File "toontown\toon\LocalToon.py", line 29, in <module>
    from toontown.shtiker import KartPage
  File "toontown\shtiker\KartPage.py", line 12, in <module>
    from FishPage import FishingTrophy
  File "toontown\shtiker\FishPage.py", line 7, in <module>
    from toontown.fishing import FishPicker
  File "toontown\fishing\FishPicker.py", line 18
    ('relief', None, None),
    ^
IndentationError: unexpected indent
